--- a/semana1/sistema-loja/index.html
+++ b/semana1/sistema-loja/index.html
@@ -1,36 +1,67 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Nome da Loja</title>
-</head>
-<body>
-    <div>
-        <h1>Bem-vind@ ao <em>nome da loja</em>!</h1>
-        <p>Frase de chamada para sua loja</p>
-    </div>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Bar Pé de Cana !</title>
+        <link rel="icon" type="img/jpg" href="./img/icone.jpg">
+        <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
+    <body>
+        <header>
+                <div class="icone-pai">
+                    <img class="icone-cerveja"src="./img/icone.jpg">
+                    <h1 class="bemvindo">Bem-vind@ a <em>Loja Pé de Cana</em>!</h1>
+                    <img class="icone-cerveja direita"src="./img/icone.jpg">
+                </div>
+                <p class="bemvindo">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                    Unde doloribus temporibus ipsum placeat officiis aut quo dolorem cupiditate 
+                    voluptate illo nam delectus veritatis, modi quas dignissimos! Recusandae modi deleniti sapiente!
+                </p>
+        </header>
 
-    <div>
-        <a href="./index.html">Página Inicial</a>
-        <a href="./ctrl-estoque.html">Controle de Estoque</a>
-        <a href="./add-produto.html">Adicionar Produto</a>
-        <a href="./funcionarios.html">Funcionários</a>
-    </div>
-
-    <div>
-        <!-- ADICIONAR INFORMAÇOES SOBRE SUA LOJINHA -->
-    </div>
-
-    <div>
-        <p>Siga-nos nas redes sociais!</p>
-
-        <div>
-            <img src="https://image.flaticon.com/icons/png/512/25/25305.png"/>
-            <img src="https://image.flaticon.com/icons/png/512/25/25425.png"/>
-            <img src="https://image.flaticon.com/icons/png/512/8/8800.png"/>
+        <div class="link-pai">
+            <a class="link" href="./index.html">Página Inicial</a>
+            <a class="link" href="./ctrl-estoque.html">Controle de Estoque</a>
+            <a class="link" href="./add-produto.html">Adicionar Produto</a>
+            <a class="link" href="./funcionarios.html">Funcionários</a>
         </div>
-    </div>
-</body>
+
+        <div id="titulo-principal">
+            <div class="conteudo">
+                <h3>Cabeçalho da mensagem</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Fugit dicta quidem harum sequi dolores ab velit non! Officia rem, repellendus,
+                    a officiis quibusdam aliquam temporibus, repudiandae cum sit consequatur debitis.
+                </p>
+            </div>
+            <div class="conteudo">
+                <h3>Cabeçalho da mensagem</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Fugit dicta quidem harum sequi dolores ab velit non! Officia rem, repellendus,
+                    a officiis quibusdam aliquam temporibus, repudiandae cum sit consequatur debitis.
+                </p>
+            </div>
+            <div class="conteudo">
+                <h3>Cabeçalho da mensagem</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Fugit dicta quidem harum sequi dolores ab velit non! Officia rem, repellendus,
+                    a officiis quibusdam aliquam temporibus, repudiandae cum sit consequatur debitis.
+                </p>
+            </div>
+        </div>
+        <footer>
+            <p>Siga-nos nas redes sociais!</p>
+            <div class="imagens-footer">
+                <img src="https://image.flaticon.com/icons/png/512/25/25305.png"/>
+                <img src="https://image.flaticon.com/icons/png/512/25/25425.png"/>
+                <img src="https://image.flaticon.com/icons/png/512/8/8800.png"/>
+            </div>
+        </footer>
+    </body>
 </html>
