inserindo novas paginas

--- a/semana1/sistema-loja/ctrl-estoque.html
+++ b/semana1/sistema-loja/ctrl-estoque.html
@@ -14,7 +14,7 @@
     <header>
         <div class="icone-pai">
             <img class="icone-cerveja" src="./img/icone.jpg">
-            <h1 class="bemvindo">Bem-vind@ a <em>Bar Pé de Cana</em>!</h1>
+            <h1 class="bemvindo">Bem-vind@ a <em>Loja Pé de Cana</em>!</h1>
             <img class="icone-cerveja direita" src="./img/icone.jpg">
         </div>
         <p class="bemvindo">
@@ -22,18 +22,18 @@
             Unde doloribus temporibus ipsum placeat officiis aut quo dolorem cupiditate
             voluptate illo nam delectus veritatis, modi quas dignissimos! Recusandae modi deleniti sapiente!
         </p>
+        <div class="link-pai">
+            <a class="link" href="./index.html">Página Inicial</a>
+            <a class="link" href="./ctrl-estoque.html">Controle de Estoque</a>
+            <a class="link" href="./add-produto.html">Adicionar Produto</a>
+            <a class="link" href="./funcionarios.html">Funcionários</a>
+            <a class="link" href="./pagina-venda.html">Pagina de Venda</a>
+            <a class="link" href="./pagina-historico-venda.html">Pagina Histórico</a>
+        </div>
     </header>
 
-    <div class="link-pai">
-        <a class="link" href="./index.html">Página Inicial</a>
-        <a class="link" href="./ctrl-estoque.html">Controle de Estoque</a>
-        <a class="link" href="./add-produto.html">Adicionar Produto</a>
-        <a class="link" href="./funcionarios.html">Funcionários</a>
-    </div>
-
-    <h2>Controle de Estoque</h2>
-
     <table border="1">
+        <h2>Controle de Estoque</h2>
         <tr>
             <th>Foto</th>
             <th>Descrição</th>
