--- a/semana1/sistema-loja/add-produto.html
+++ b/semana1/sistema-loja/add-produto.html
@@ -14,7 +14,7 @@
     <header>
         <div class="icone-pai">
             <img class="icone-cerveja" src="./img/icone.jpg">
-            <h1 class="bemvindo">Bem-vind@ a <em>Bar Pé de Cana</em>!</h1>
+            <h1 class="bemvindo">Bem-vind@ a <em>Loja Pé de Cana</em>!</h1>
             <img class="icone-cerveja direita" src="./img/icone.jpg">
         </div>
         <p class="bemvindo">
@@ -22,14 +22,15 @@
             Unde doloribus temporibus ipsum placeat officiis aut quo dolorem cupiditate
             voluptate illo nam delectus veritatis, modi quas dignissimos! Recusandae modi deleniti sapiente!
         </p>
+        <div class="link-pai">
+            <a class="link" href="./index.html">Página Inicial</a>
+            <a class="link" href="./ctrl-estoque.html">Controle de Estoque</a>
+            <a class="link" href="./add-produto.html">Adicionar Produto</a>
+            <a class="link" href="./funcionarios.html">Funcionários</a>
+            <a class="link" href="./pagina-venda.html">Pagina de Venda</a>
+            <a class="link" href="./pagina-historico-venda.html">Pagina Histórico</a>
+        </div>
     </header>
-
-    <div class="link-pai">
-        <a class="link" href="./index.html">Página Inicial</a>
-        <a class="link" href="./ctrl-estoque.html">Controle de Estoque</a>
-        <a class="link" href="./add-produto.html">Adicionar Produto</a>
-        <a class="link" href="./funcionarios.html">Funcionários</a>
-    </div>
 
     <h2>Adicionar Produto</h2>
     <form action="">
@@ -40,25 +41,21 @@
 
         <div>
             <label for="descricao">Descrição do produto: </label>
-            <!-- Adicione o id apropriado para o input abaixo -->
             <input type="text" id="descricao" name="descrição">
         </div>
 
         <div>
             <label for="preco">Preço (em R$): </label>
-            <!-- Adicione o id apropriado e o type para receber números abaixo -->
             <input type="number" id="preco" name="preço">
         </div>
 
         <div>
-            <!-- Preencha as propriedades necessárias para os elementos abaixo -->
             <label>Quantidade disponível: </label>
             <input>
         </div>
 
-        <div class="form-add">
-            <!-- Adicione ao type do botão abaixo o valor para que ele submeta o formulário -->
-            <button type="submit">Adicionar</button>
+        <div>
+            <button class="form-add" type="submit">Adicionar</button>
         </div>
     </form>
     <footer>
