--- a/semana1/sistema-loja/funcionarios.html
+++ b/semana1/sistema-loja/funcionarios.html
@@ -1,41 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Funcionários</title>
+    <title>Bar Pé de Cana !</title>
+    <link rel="icon" type="img/jpg" href="./img/icone.jpg">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
-    <div>
-        <p>Nome da loja</p>
-    </div>
-    
-    <div>
-        <a href="./index.html">Página Inicial</a>
-        <a href="./ctrl-estoque.html">Controle de Estoque</a>
-        <a href="./add-produto.html">Adicionar Produto</a>
-        <a href="./funcionarios.html">Funcionários</a>
-    </div>
+    <header>
+        <div class="icone-pai">
+            <img class="icone-cerveja" src="./img/icone.jpg">
+            <h1 class="bemvindo">Bem-vind@ a <em>Loja Pé de Cana</em>!</h1>
+            <img class="icone-cerveja direita" src="./img/icone.jpg">
+        </div>
+        <p class="bemvindo">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            Unde doloribus temporibus ipsum placeat officiis aut quo dolorem cupiditate
+            voluptate illo nam delectus veritatis, modi quas dignissimos! Recusandae modi deleniti sapiente!
+        </p>
+        <div class="link-pai">
+            <a class="link" href="./index.html">Página Inicial</a>
+            <a class="link" href="./ctrl-estoque.html">Controle de Estoque</a>
+            <a class="link" href="./add-produto.html">Adicionar Produto</a>
+            <a class="link" href="./funcionarios.html">Funcionários</a>
+            <a class="link" href="./pagina-venda.html">Pagina de Venda</a>
+            <a class="link" href="./pagina-historico-venda.html">Pagina Histórico</a>
+        </div>
+    </header>
 
     <h2>Funcionários</h2>
     <!-- Crie uma lista de funcionários usando as tags que você aprendeu hoje abaixo \/ -->
-        <ol>
+    <ol class="paipai">
+        <div class="atendentes">
             <li>Atendentes</li>
-            <ul>
-                <li>Gabriel Souza</li>
-                <li>Pé de pano</li>
-                <li>Alice Barbuda</li>
-                <li>Amado Amoroso</li>
+            <ul class="funcionarios">
+                <li>Son goku</li><img class="imagens-funcionarios" src="./img/goku.jpg">
+                <li>Sasuke uchiha</li><img class="imagens-funcionarios" src="./img/sasuke.jpg">
+                <li>Ichigo Kurosaki</li><img class="imagens-funcionarios" src="./img/ichigo.png">
+                <li>Edward Eric</li><img class="imagens-funcionarios" src="./img/edward.jpg">
             </ul>
-
+        </div>
+        <div class="cozinha">
             <li>Cozinha</li>
             <ul>
-                <li> Jafé </li>
-                <li> Noé </li>
-                <li> Khan </li>
-                <li> Matusalém </li>
+                <li> Zoro </li><img class="imagens-funcionarios" src="./img/zoro.jpg">
+                <li> Luff </li><img class="imagens-funcionarios" src="./img/luff.jpg">
+                <li> Levi Ackerman </li><img class="imagens-funcionarios" src="./img/levi.jpeg">
+                <li> Natsu Dragneel </li><img class="imagens-funcionarios" src="./img/natsu.png">
             </ul>
-        </ol>
+        </div>
+    </ol>
+    <footer>
+        <p>Siga-nos nas redes sociais!</p>
+        <div class="imagens-footer">
+            <img src="https://image.flaticon.com/icons/png/512/25/25305.png" />
+            <img src="https://image.flaticon.com/icons/png/512/25/25425.png" />
+            <img src="https://image.flaticon.com/icons/png/512/8/8800.png" />
+        </div>
+    </footer>
 </body>
+
 </html>
