--- a/semana1/bugfixes/home.html
+++ b/semana1/bugfixes/home.html
@@ -9,19 +9,19 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <title>For Ever 4</title>
 </head>
-
 <body>
     <h2>For Ever 4</h2>
     <div>
         <div class="container" id="container-de-descricao">
-            <p> Somos uma empresa focada em tornar a compra de roupas mais fácil </p>
-            <ol>
-                <li> Ache os melhores descontos </li>
-                <li> Busque pelos seus gostos</li>
-            </ol>
-            <h3> Realize seus sonhos conosco</h3>
+            <div class="texto-container">
+                <p> Somos uma empresa focada em tornar a compra de roupas mais fácil </p>
+                    <ol>
+                        <li> Ache os melhores descontos </li>
+                        <li> Busque pelos seus gostos</li>
+                    </ol>
+                <h3> Realize seus sonhos conosco</h3>
+            </div>
         </div>
-
         <div class="container" id="container-para-comprar">
             <p> BORA COMEÇAR A </p>
             <a href="comprar.html"><button class="botao-amarelo" > COMPRAR </button></a>
@@ -29,5 +29,4 @@
     </div>
 </body>
 </body>
-
 </html>
