centralizando a tabela com o margin

--- a/semana1/bugfixes/home.html
+++ b/semana1/bugfixes/home.html
@@ -14,11 +14,11 @@
     <div>
         <div class="container" id="container-de-descricao">
             <div class="texto-container">
-                <p> Somos uma empresa focada<br> em tornar a compra de<br> roupas mais fácil </p>
+                <p> Somos uma empresa focada<br> em tornar a compra de<br> roupas mais fácil </p><br><br>
                     <ol>
                         <li> Ache os melhores descontos </li>
                         <li> Busque pelos seus gostos</li>
-                    </ol>
+                    </ol><br>
                 <h3> Realize seus sonhos conosco</h3>
             </div>
         </div>
