--- a/semana1/bugfixes/comprar.html
+++ b/semana1/bugfixes/comprar.html
@@ -41,7 +41,7 @@
             </tr>
         </table>
     </div>
-    <div>
+    <div class="div-do-botao">
         <a href="./home.html"><button id="back-button"> VOLTAR </button></a>
     </div>
 </body>
