--- a/semana1/portifolio/index.html
+++ b/semana1/portifolio/index.html
@@ -11,16 +11,14 @@
 <body>
     <main>
         <header>
-            <h1><p>Gabriel Mina da Silva</p></h1>
+            <br><br><br>
             <ul>
-                <li>Home</li>
-                <li>Sobre</li>
-                <li>Habilidades</li>
-                <li>Projetos</li>
-                <li>Contato</li>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Habilidades</a></li>
+                <li><a href="#">Projetos</a></li>
+                <li><a href="#">Contato</a></li>
             </ul>
         </header>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <div class="foto-minha">
             <h2><p>Desenvolvedor full stack web</p></h2>
             <img src="img/fotoMinha.jpeg" class="foto-minha" alt="foto do gabriel">
