--- a/semana1/portifolio/projetos.html
+++ b/semana1/portifolio/projetos.html
@@ -23,6 +23,15 @@
             <img src="img/fotoMinha.jpg" class="foto-minha" alt="foto do gabriel">
             <h3><p>Desenvolvedor por amor , acredito na mudança de vida com a tecnologia.</p></h3>
         </div>
+        <div class="galeria-fotos">
+            <h4>Galerinha de fotos</h4>
+            <div class="projeto-fotos">
+                    <img src="img/fotos1.png" class="foto-projeto" alt="foto do gabriel">
+                    <a href="projeto.html">saiba mais sobre o projeto</a>
+                    <img src="img/fotos2.png" class="foto-projeto" alt="foto do gabriel">
+                    <a href="projeto2.html">Saiba mais sobre o projeto</a>
+            </div>
+        </div>
         <footer>
             <h3>Contato sobre mim</h3><br>
             <p>telefone: (21)98342-3931</p>
