--- a/semana1/portifolio/contato.html
+++ b/semana1/portifolio/contato.html
@@ -23,6 +23,14 @@
             <img src="img/fotoMinha.jpg" class="foto-minha" alt="foto do gabriel">
             <h3><p>Desenvolvedor por amor , acredito na mudança de vida com a tecnologia.</p></h3>
         </div>
+        <form action="#" class="formulario"><br>
+            <label>Insira seu nome de contato:</label><br>
+            <input type="text" placeholder="Digite seu nome aqui" required><br><br>
+            <label>Insira seu email de contato</label><br>
+            <input type="text" placeholder="Digite seu email aqui"><br><br>
+            <textarea name="mensagem" rows="10" cols="30" placeholder="digite a mensagem"></textarea><br><br>
+            <button class="bota-formulario">Enviar mensagem</button><br><br>
+        </form>
         <footer>
             <h3>Contato sobre mim</h3><br>
             <p>telefone: (21)98342-3931</p>
