--- a/semana1/portifolio/projeto.html
+++ b/semana1/portifolio/projeto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifólio - Gabriel Mina Silva</title>
+    <title>Projeto</title>
     <link rel="icon" type="img/jpg" href="img/favicon.png">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
@@ -16,24 +16,33 @@
                 <li><a href="habilidade.html">Habilidades</a></li>
                 <li><a href="projetos.html">Projetos</a></li>
                 <li><a href="contato.html">Contato</a></li>
-     </ul>
+            </ul>
         </header>
         <div class="sobre-mim">
             <h2><p>Desenvolvedor full stack web</p></h2>
             <img src="img/fotoMinha.jpg" class="foto-minha" alt="foto do gabriel">
             <h3><p>Desenvolvedor por amor , acredito na mudança de vida com a tecnologia.</p></h3>
         </div>
+
+        <div class="projeto">
+            <h2>Projeto de site de Vendas</h2>
+            <img src="img/fotos1.png" class="foto-projeto1" alt="foto do gabriel">
+            <P>
+                Este projeto é um projeto de sistema de vendas , no qual foi utilizado somente <em>HTML</em> e <em>CSS</em>
+            </P>
+        </div>
+        
         <footer>
-            <h3>Contato sobre mim</h3><br>
+            <h3><p>Contato sobre mim</p></h3>
             <p>telefone: (21)98342-3931</p>
             <p>Email: gabrielmina118@gmail.com</p>
             <p>Siga-me nas redes sociais</p>
             <div class="redes-sociais">
-                <img src="https://image.flaticon.com/icons/png/512/25/25305.png"/>
-                <img src="https://image.flaticon.com/icons/png/512/25/25425.png"/>
-                <img src="https://image.flaticon.com/icons/png/512/8/8800.png"/>
+                <img src="img/fotoMinha.jpeg" class="foto-minha" alt="foto do gabriel">
+                <img src="img/fotoMinha.jpeg" class="foto-minha" alt="foto do gabriel">
+                <img src="img/fotoMinha.jpeg" class="foto-minha" alt="foto do gabriel">
             </div>
         </footer>
-    </main>    
+    </main>
 </body>
 </html>
